--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -98,115 +98,166 @@
    </header> 
 
 <!--SPECIALS-->
-
   <section id="specials"> SPECIALS
     </section>
-  <div class="special-content">
-      <div class="size-frame">
-      <div class="size" style:> 
-        <p1>SML</p1>
+    <div class="content">
+
+      <div class="menu-item-row">
+        <div class="size"></div> 
+          <p1>SML</p1>
+          </div>
         </div>
-      </div>
+
+      <div class="rows">
+          <div class="items">
+            <p2>Thai Iced Cappuccino</p2>
+          </div>
+          <div class="details">
+            <p3>Channel your inner exotic spirit with a double shot of espresso finished with sweetened condensed milk</p3>
+          </div>
+          <div class="pricing"> 
+            <ul>
+              <li>4.25</li>
+            </ul>
+          </div>
+        </div>
+
       <div class="rows">
         <div class="items">
-          <p2>Thai Iced Cappuccino</p2>
+          <p2>Joyous Almond Latte</p2>
         </div>
-      </div>
-      <div class="rows">
         <div class="details">
-          <p3>Channel your inner exotic spirit with a double shot of espresso finished with sweetened condensed milk</p3>
+          <p3>Imagine drinking the candy or … <br>
+          only better!! </p3>
+        </div>
+        <div class="pricing">  
+          <ul>
+            <li>4.55</li>
+            <li>4.95</li>
+            <li>5.35</li>
+            </ul>
         </div>
       </div>
+        
+        <div class="rows">
+          <div class="items">
+            <p2>Banana Nut Mocha</p2>
+          </div>
+          <div class="details">
+            <p3>You’ll go BANANAS!!<br>
+              It’s so yum… yep, just yum!  </p3>
+          </div>
+          <div class="pricing">  
+            <ul>
+              <li>4.00</li>
+              <li>4.50</li>
+              <li>5.00</li>
+          </div>
+        </div>
+
       <div class="rows">
-        <div class="pricing"> 
-          <p3>4.25</p3>
+        <div class="extra">
+          ***All specials are <br>
+            either double or triple shots***
+          </div>
         </div>
-      </div>
     </div>
 
-    <div class="items"></div>
-      <h3>Joyous Almond Latte</h3>
-    </div>
-    <div class="Details">
-      <p1>Imagine drinking the candy or … <br>
-      only better!! </p1>
-    </div>
-    <div class="pricing">  
-      <p2>4.25 4.50 5.00</p2>
-    </div>
-    <div class="extra">
-    <p3>***All specials are <br>
-      either double or triple shots***</p3>
-    </div>
-  </div>
 
-   <div class="bg-for-content">
+  <div class="bg-for-content">
 <!--BEVERAGES-->
-    <section id="beverages">
-     <h1>BEVERAGES</h1>
-      </section>
-    <!--Cold Drinks-->
-     <h3>Cold Drinks</h3>
-     <div class="menu-items">
-      <ul>
-        <li> </li>
-        <li> Coffee </li>
-        <li> Americano </li>
-        <li> Latte </li>
-        <li> Mocha </li>
-        <li> Mocha Frappe </li>
-        <li> Chai </li>
-        <li> Thai Cappuccin </li>
-        <li> Thai Tea </li>
-        <li> Iced Tea </li>
-    </div>
-    <div class="pricing">
-      <ul>
-        <li>SML </li>
-        <li>- 2.75 - </li>
-        <li>2.00 2.50 3.00</li>
-        <li>3.55 3.90 4.75</li>
-        <li>- 4.25 5.00</li>
-        <li>3.75 4.50 5.50</li>
-        <li>- 3.95 4.25</li>
-        <li>3.25 4.25 -</li>
-        <li>- 3.50 3.00</li>
-        <li>2.00 2.50 3.00</li>
-    </div>
-    <!--HOT DRINKS-->
-    <h3>Hot Drinks</h3>
-     <div class="menu-items">
-      <ul>
-        <li> </li>
-        <li> Drip Coffee </li>
-        <li> Expresso </li>
-        <li> Macchiato </li>
-        <li> Americano </li>
-        <li> Cappuccino </li>
-        <li> Caffe Latte </li>
-        <li> Caffe Mocha </li>
-        <li> Caramel Machiato </li>
-        <li> Hot Chocolate </li>
-        <li> Chai </li>
-        <li> Organic Tea </li>
-    </div>
-    <div class="pricing">
-      <ul>
-        <p1>SML </p1>
-        <li>2.15 2.50 2.75 </li>
-        <li>2.15 2.75 3.35</li>
-        <li>2.35 2.85 4.75</li>
-        <li>2.00 2.50 3.25</li>
-        <li>2.95 3.50 4.25</li>
-        <li>3.55 3.95 4.75</li>
-        <li>3.70 4.25 5.00</li>
-        <li>3.95 4.40 5.05</li>
-        <li>3.25 3.75 -</li>
-        <li>3.25 3.95 -</li>
-        <li>2.50 - -</li>
-    <p3>Almond Milk 0.75<br>
-          Soymilk 0.50 </p3> 
-    </div>
+    <section id="beverages">BEVERAGES
+        </section>
+      <div class="content">
+
+        <!--Cold Drinks-->
+        <div class="cold-drinks-frame">
+          <div class="rows">
+          <p4>Cold Drinks</p4>
+          </div>
+          <div class="menu-item-row">
+            <p
+                  <ul>
+                    <li>S</li>
+                    <li>M</li>
+                    <li>L</li>
+                  </ul>
+              </div>
+            </div>
+            
+          <div class="drink-item-row">
+            <p1>Coffee</p1>
+            <p1>
+              <ul>
+                <li>NA</li>
+                <li>2.75</li>
+                <li>NA</li>
+              </ul>
+            </p1>
+          </div>
+
+          <div class="menu-items">
+            <ul>
+              <li> Coffee </li>
+              <li> Americano </li>
+              <li> Latte </li>
+              <li> Mocha </li>
+              <li> Mocha Frappe </li>
+              <li> Chai </li>
+              <li> Thai Cappuccin </li>
+              <li> Thai Tea </li>
+              <li> Iced Tea </li>
+          </div>
+          <div class="pricing">
+            <ul>
+              <li>SML </li>
+              <li>- 2.75 - </li>
+              <li>2.00 2.50 3.00</li>
+              <li>3.55 3.90 4.75</li>
+              <li>- 4.25 5.00</li>
+              <li>3.75 4.50 5.50</li>
+              <li>- 3.95 4.25</li>
+              <li>3.25 4.25 -</li>
+              <li>- 3.50 3.00</li>
+              <li>2.00 2.50 3.00</li>
+          </div>
+        </div>
+
+          <!--HOT DRINKS-->
+          <h3>Hot Drinks</h3>
+          <div class="menu-items">
+            <ul>
+              <li> </li>
+              <li> Drip Coffee </li>
+              <li> Expresso </li>
+              <li> Macchiato </li>
+              <li> Americano </li>
+              <li> Cappuccino </li>
+              <li> Caffe Latte </li>
+              <li> Caffe Mocha </li>
+              <li> Caramel Machiato </li>
+              <li> Hot Chocolate </li>
+              <li> Chai </li>
+              <li> Organic Tea </li>
+          </div>
+          <div class="pricing">
+            <ul>
+              <p1>SML </p1>
+              <li>2.15 2.50 2.75 </li>
+              <li>2.15 2.75 3.35</li>
+              <li>2.35 2.85 4.75</li>
+              <li>2.00 2.50 3.25</li>
+              <li>2.95 3.50 4.25</li>
+              <li>3.55 3.95 4.75</li>
+              <li>3.70 4.25 5.00</li>
+              <li>3.95 4.40 5.05</li>
+              <li>3.25 3.75 -</li>
+              <li>3.25 3.95 -</li>
+              <li>2.50 - -</li>
+          <p3>Almond Milk 0.75<br>
+                Soymilk 0.50 </p3> 
+          </div>
+      </div>
   </div>
   
 <!--FOOD-->
@@ -281,8 +332,7 @@
   
   <!--CONTACT US--> 
   <div>
-    <section id="contact-us">
-    <h1>CONTACT US</h1>
+    <section id="contact-us"> CONTACT US
     </section>
       <h3>E-mail Address</h3>
       <p1>charliescafesm@outlook.com</p1>
@@ -296,8 +346,7 @@
 
   <!--FOLLOW US--> 
   <div>
-  <section id="follow-us">
-    <h1>FOLLOW US</h1>
+  <section id="follow-us"> FOLLOW US
      </section> 
     <div class="facebookicon"> <img src="./img/FB_Logo.png" style="width:37px; height:37px;">
       </div>
@@ -307,8 +356,7 @@
 
   <!--REVIEWS--> 
   <div>
-    <section id="reviews">
-    <h1>REVIEWS</h1>  
+    <section id="reviews">REVIEWS 
    </section> 
    <p4>Share your experience at Charlie’s Café and earn a chance to win a FREE DRINK!</p4>
   </div>
