Location and Contact Update

--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -470,46 +470,139 @@
   <div class="bg-for-content">
     <section id="visit-us"> VISIT US 
        </section> 
-    <div class="content">
+    <div class="content clearfix">
 
       <div class="sub-intro">
         Visit us at Hayden Library, Design North-Architecture, and Biodesign Each location has its own personality, find the one that suits you!
       </div> 
        
       <div class="location">
+
         <div class="hayden-library"> 
-          </div> 
-        <div class="intro"> 
-          <p class="location-name">
-              Charlie’s Café Hayden Library
-          </p>
+          <img src="img/Hayden_Library.jpg" alt="Hayden Library, ASU" style="max-width: 100%; max-height: 100%; display: block;">
+          <div class="img-tip"> 
+            Charlie’s Café Hayden Library
+          </div>
         </div>
-          <div class="locations"> 300 E Orange St. Tempe AZ 85287
-            </div>
-          <div class="days"> Monday-Friday <br> 
+
+        <div class="cafe-location"> 
+          <a href= "https://goo.gl/maps/5vpMRoULadHdKacFA"> 300 E Orange St. Tempe AZ 85287 </a> 
+          </div>
+
+        <div class="days"> 
+              Monday-Friday <br> 
               Saturday – Sunday </br>
-            </div>
-          <div class="hours"> 07:00 – 15:00 <br>
+          </div>
+
+        <div class="hours"> 
+              07:00 – 15:00 <br>
               Closed </br>
-            </div>  
+          </div>  
+
       </div>
 
-        
+      <div class="location">
+
+        <div class="design-north"> 
+          <img src="img/DesignNorth.jpg" alt="Design North, ASU" style="max-width: 100%; max-height: 100%; display: block;">
+          <div class="img-tip"> 
+            Charlie’s Café Design North
+          </div>
+        </div>
+
+        <div class="cafe-location"> 
+          <a href= "https://goo.gl/maps/BrNAFXSXXbg4sTs87"> 
+            810 S Forest Mall Tempe AZ 85281 </a> 
+          </div>
+
+        <div class="days"> 
+              Monday-Friday <br> 
+              Saturday – Sunday </br>
+          </div>
+
+        <div class="hours"> 
+              07:00 – 15:00 <br>
+              Closed </br>
+          </div>  
+
+      </div>
+
+      <div class="location">
+
+        <div class="bio-design"> 
+          <img src="img/Biodesign.jpg" alt="Biodesign, ASU" style="max-width: 100%; max-height: 100%; display: block;">
+          <div class="img-tip"> 
+            Charlie’s Café Biodesign
+          </div>
+        </div>
+
+        <div class="cafe-location"> 
+          <a href= "https://goo.gl/maps/gydme8XgHk76WWak8"> 
+            727 E Tyler St Tempe AZ 85281 </a> 
+          </div>
+
+        <div class="days"> 
+              Monday-Friday <br> 
+              Saturday – Sunday </br>
+          </div>
+
+        <div class="hours"> 
+              07:00 – 16:00 <br>
+              Closed </br>
+          </div>  
+
+      </div>
+
+      <div class="plan-view">
+        <img src="img/map.jpg" style="max-width: 100%; max-height: 100%; display: block">
+      </div>
+
+
     </div>
   </div>
-  
+
   <!--CONTACT US--> 
   <div>
     <section id="contact-us"> CONTACT US
     </section>
-      <h3>E-mail Address</h3>
-      <p1>charliescafesm@outlook.com</p1>
-      <h3>Charlie’s Café Hayden Library</h3>
-      <p1>(480)727-0377</p1>
-      <h3>Charlie’s Café Design North</h3>
-      <p1>(480)727-0377</p1>
-      <h3>Charlie’s Café Biodesign</h3>
-      <p1>(480)965-3515</p1>
+    <div class="content">
+
+      <div class="content-row">
+        <div class="contact-detail">
+          <p2>E-mail Address</p2>
+        </div>
+        <div class="contact-info">
+            <p3>charliescafesm@outlook.com</p3>
+        </div>
+      </div>
+
+      <div class="content-row">
+        <div class="contact-detail">
+          <p2>Charlie’s Café Hayden Library</p2>
+        </div>
+        <div class="contact-info">
+            <p3>(480)727-0377</p3>
+        </div>       
+      </div>
+
+      <div class="content-row">
+        <div class="contact-detail">
+          <p2>Charlie’s Café Design North</p2>
+        </div>
+        <div class="contact-info">
+            <p3>(480)727-0377</p3>
+        </div>
+
+        <div class="content-row">
+          <div class="contact-detail">
+            <p2>Charlie’s Café Biodesign</p2>
+          </div>
+          <div class="contact-info">
+              <p3>(480)965-3515</p3>
+          </div>
+
+    </div>  
+
   </div>  
 
   <!--FOLLOW US--> 
