ContactUs&FollowUs Update

--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -562,17 +562,17 @@
   </div>
 
   <!--CONTACT US--> 
-  <div>
+  <div class="content contact-content">
     <section id="contact-us"> CONTACT US
     </section>
-    <div class="content">
+  
 
       <div class="content-row">
         <div class="contact-detail">
           <p2>E-mail Address</p2>
         </div>
         <div class="contact-info">
-            <p3>charliescafesm@outlook.com</p3>
+          <a href=mailto:sample@163.com>charliescafesm@outlook.com</a>
         </div>
       </div>
 
@@ -581,7 +581,7 @@
           <p2>Charlie’s Café Hayden Library</p2>
         </div>
         <div class="contact-info">
-            <p3>(480)727-0377</p3>
+          <a href="tel:(480)727-0377">(480)727-0377</a>
         </div>       
       </div>
 
@@ -590,41 +590,71 @@
           <p2>Charlie’s Café Design North</p2>
         </div>
         <div class="contact-info">
-            <p3>(480)727-0377</p3>
+          <a href="tel:(480)727-0377">(480)727-0377</a>
         </div>
+      </div>
 
-        <div class="content-row">
-          <div class="contact-detail">
+      <div class="content-row">
+        <div class="contact-detail">
             <p2>Charlie’s Café Biodesign</p2>
-          </div>
-          <div class="contact-info">
-              <p3>(480)965-3515</p3>
-          </div>
+        </div>
+        <div class="contact-info">
+          <a href="tel:(480)965-3515">(480)965-3515</a>
+        </div>
+      </div>
+  </div>
 
-    </div>  
-
-  </div>  
 
   <!--FOLLOW US--> 
-  <div>
-  <section id="follow-us"> FOLLOW US
-     </section> 
-    <div class="facebookicon"> <img src="./img/FB_Logo.png" style="width:37px; height:37px;">
+
+  <section id="follow-us"> FOLLOW US</section> 
+
+  <div class="content">
+    <div class="sns-row">
+      <div class="facebookicon"> <img src="./img/FB_Logo.png" style="width:37px; height:37px;">
+        </div>
+      <div class="facebook-link">
+        <a href= "https://www.facebook.com/charliescafeasu/">
+        https://www.facebook.com/charliescafeasu/
+        </a>
       </div>
-      <p1>https://www.facebook.com/charliescafeasu/</p1>
-      <div class="facebookicon"> <img src="./img/Yelp_Logo.png" style="width:70px; height:34px;">
-      <p1>https://www.yelp.com/biz/charlie-s-café-tempe</p1>
+    </div>
+
+    <div class="sns-row">
+      <div class="yelpicon"> <img src="./img/Yelp_Logo.png" style="width: 70px; height: 34px;">
+        </div>
+      <div class="yelp-link">
+        <a href= "https://www.facebook.com/charliescafeasu/">
+        https://www.facebook.com/charliescafeasu/
+        </a>
+      </div>
+    </div>
+
+  </div>
+   
 
   <!--REVIEWS--> 
-  <div>
-    <section id="reviews">REVIEWS 
-   </section> 
-   <p4>Share your experience at Charlie’s Café and earn a chance to win a FREE DRINK!</p4>
+  <section id="reviews">REVIEWS </section> 
+  <div class="content">  
+
+    <div class="sub-intro">
+      Share your experience at Charlie’s Café and earn a chance to win a FREE DRINK!
+    </div> 
+
+    <div class="comment-box">
+
+    </div>
+
+    <div class="previous-comment">
+
+    </div>
+
   </div>
 
   <footer>
   <!--Logo At The Bottom--> 
-  <div class="mustache-logo"> <img src="./img/Logo.jpg" style="width:30%; height:30%;">
+  <div class="mustache-logo" id="footer-logo"> <a href="#top">
+    <img src="./img/Logo.jpg" style="width:30%; height:30%; margin: auto;"> </a>
   </div>
   </footer>
 
